<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilActivity">

   <!-- <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>  -->

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="77dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailPlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/ures"
        app:layout_constraintStart_toEndOf="@id/emailTextView"
        app:layout_constraintTop_toTopOf="@id/emailTextView" />

    <TextView
        android:id="@+id/sulyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailTextView"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/weight_now"
        app:layout_constraintBottom_toTopOf="@id/sulyEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailTextView" />

    <TextView
        android:id="@+id/sulyPlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:text="@string/ures"
        app:layout_constraintStart_toEndOf="@id/sulyTextView"
        app:layout_constraintTop_toTopOf="@id/sulyTextView" />

    <EditText
        android:id="@+id/sulyEditText"
        android:layout_width="222dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/new_weight"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sulyTextView" />


    <Button
        android:id="@+id/elkuldom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#8BC34A"
        android:onClick="send"
        android:text="@string/send"
        app:iconTint="#8BC34A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sulyEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>